--- a/stuff/chat.scss
+++ b/stuff/chat.scss
@@ -166,6 +166,7 @@
     
     .barButtonAlt-mYL1lj { 
         text-indent: -10000px;
+        font-size: 0;        
         padding: 0 6px;
 
         .barButtonIcon-3t4V3d { 
